<resources>
    <string name="app_name">My Application</string>
    <string name="radio_baudrate_115200">115200</string>
    <string name="radio_baudrate_57600">57600</string>
    <string name="radio_baudrate_38400">38400</string>
    <string name="radio_baudrate_28800">28800</string>
    <string name="radio_databits_5">5</string>
    <string name="radio_databits_6">6</string>
    <string name="radio_databits_7">7</string>
    <string name="radio_databits_8">8</string>
    <string name="radio_stopbit_1">1</string>
    <string name="radio_stopbit_2">2</string>
    <string name="radio_stopbit_3">3</string>
    <string name="radio_paritybit_0">0</string>
    <string name="radio_paritybit_1">1</string>
    <string name="radio_paritybit_2">2</string>
    <string name="radio_paritybit_3">3</string>
    <string name="radio_paritybit_4">4</string>
    <string name="btn_submit">SUBMIT</string>
</resources>
