<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">

        <RadioGroup
            android:id="@+id/radioBaudrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Baudrate"
                android:textSize="20dp"/>

            <RadioButton
                android:id="@+id/baudrate_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_baudrate_115200"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/baudrate_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_baudrate_57600" />

            <RadioButton
                android:id="@+id/baudrate_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_baudrate_38400" />

            <RadioButton
                android:id="@+id/baudrate_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_baudrate_28800" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioDatabits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Databits"
                android:textSize="20dp"/>

            <RadioButton
                android:id="@+id/databits_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_databits_5" />

            <RadioButton
                android:id="@+id/databits_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_databits_6" />

            <RadioButton
                android:id="@+id/databit_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_databits_7" />
            <RadioButton
                android:id="@+id/databit_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_databits_8"
                android:checked="true" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioStopbits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Stopbits"
                android:textSize="20dp"/>

            <RadioButton
                android:id="@+id/stopbits_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_stopbit_1"
                android:checked="true" />

            <RadioButton
                android:id="@+id/stopbit_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_stopbit_2" />

            <RadioButton
                android:id="@+id/stopbit_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_stopbit_3" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioParitybits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Paritybits"
                android:textSize="20dp"/>

            <RadioButton
                android:id="@+id/paritybits_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_paritybit_0"
                android:checked="true" />

            <RadioButton
                android:id="@+id/paritybits_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_paritybit_1" />

            <RadioButton
                android:id="@+id/paritybits_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_paritybit_2" />

            <RadioButton
                android:id="@+id/paritybits_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_paritybit_3" />

            <RadioButton
                android:id="@+id/paritybits_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_paritybit_4" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentBaudrate"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentDatabit"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentStopBit"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentParityBit"
                android:textSize="20dp"/>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_gravity="bottom"
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:background="?android:attr/listDivider"
            android:layout_height="2dp" />

        <TextView
            android:id="@+id/txtOut"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:freezesText="true"
            android:gravity="bottom"
            android:scrollbars="vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:typeface="monospace" />

        <View
            android:layout_width="match_parent"
            android:background="?android:attr/listDivider"
            android:layout_height="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/send_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:inputType="text|textNoSuggestions"
                android:singleLine="true" />

            <Button
                android:id="@+id/send_btn"
                android:drawableStart="@drawable/send"
                android:layout_width="48dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
